--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <head>
-  <title>Test</title>
+  <title>Test2</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
