--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Mukta+Mahee" rel="stylesheet">
-  <title>Spin Me!</title>
+  <title>SPIN WHEEL</title>
   <style>
 #wrapper {
   height: 500px;
@@ -22,41 +22,30 @@
   left: 50%;
   z-index: 1000;
 
-  width: 200px;
-  height:200px;
-  background-color:rgba(0,57,94,1);
-  color:white;
+  width: 100px;
+  height:100px;
+  background-color:red;
+  color:black;
   font-family: Avenir;
   font-size: 30px;
 
-  margin-left: -100px;
-  margin-top: -100px;
+  margin-left: -50px;
+  margin-top: -50px;
 
-  border-style: solid;
-  border-color:white;
-  border-width: 15px;
   border-radius: 50%;
-
-  box-shadow: 0px 0px 30px yellow;
-
-  transition: 1s;
-}
-
-.button:hover {
-  transform: scale(1.1,1.1);
 }
   </style>
 </head>
 
 <body>
 <div id="wrapper">
-  <input class="button" type="button" value="SPIN ME" id='spin' />
+  <input class="button" type="button" value="spin" id='spin' />
   <canvas id="canvas" width="500" height="500"></canvas>
 </div>
 
 
   <script>
-    var options = ["ABS", "ARMS", "LOWERBODY", "CHEST", "SHOULDERS", "UPPERBODY", "ARMS", "FULLBODY"];
+    var options = ["ABS", "ARMS", "LEGS", "CHEST", "SHOULDERS", "UPPERBODY", "LOWERBODY", "FULLBODY"];
 
     var doSomething = ["20 SITUPS", "10 PUSHUPS", "20 SQUATS", "10 BENCHPRESS", "10 SHOULDERPRESS", "20 DIPS", "10 SOMETHING", "20 SOMETHING"]
 
@@ -78,7 +67,7 @@
     }
 
     function RGB2Color(r, g, b) {
-       return "#00395e";
+      return '#' + byte2Hex(r) + byte2Hex(g) + byte2Hex(b);
     }
 
     function getColor(item, maxitem) {
@@ -119,9 +108,12 @@
           ctx.fill();
 
           ctx.save();
-          ctx.fillStyle = "white";
+          ctx.shadowOffsetX = -1;
+          ctx.shadowOffsetY = -1;
+          ctx.shadowBlur = 0;
+          ctx.shadowColor = "rgb(220,220,220)";
+          ctx.fillStyle = "black";
           ctx.fontFamily = "Avenir";
-          ctx.borderStyle = "solid";
           ctx.translate(250 + Math.cos(angle + arc / 2) * textRadius,
             250 + Math.sin(angle + arc / 2) * textRadius);
           ctx.rotate(angle + arc / 2 + Math.PI / 2);
@@ -170,7 +162,7 @@
       var arcd = arc * 180 / Math.PI;
       var index = Math.floor((360 - degrees % 360) / arcd);
       ctx.save();
-      ctx.font = '30px Avenir';
+      ctx.font = '20px Avenir';
       var text = doSomething[index]
       ctx.fillText(text, 250 - ctx.measureText(text).width / 2, 500 - 20);
       ctx.restore();
@@ -179,7 +171,7 @@
     function easeOut(t, b, c, d) {
       var ts = (t /= d) * t;
       var tc = ts * t;
-      return b + c * (tc + -2 * ts + 2 * t);
+      return b + c * (tc + -3 * ts + 3 * t);
     }
 
     drawRouletteWheel();
